--- a/views/layout/_navigation.jade
+++ b/views/layout/_navigation.jade
@@ -16,3 +16,4 @@
         li: a(href='/posts/') Posts
         li: a(href='/login') Login
         li: a(href='/register') Register
+      li: a(href='/tags') Popular tags
