--- a/views/layout/_navigation.jade
+++ b/views/layout/_navigation.jade
@@ -1,6 +1,6 @@
 .navbar.navbar-static-top
   .navbar-inner
-    a.brand(href='/') My Blog
+    a.brand(href='/') &mu;logger
     ul.nav
       //- li: a(href='/') Home
 
@@ -16,4 +16,7 @@
         li: a(href='/posts/') Posts
         li: a(href='/login') Login
         li: a(href='/register') Register
+      li: a(href='/users') Users
+      li: a(href='/cats') Categories
+      li: a(href='/groups') Groups
       li: a(href='/tags') Popular tags
