--- a/views/comments/_comment.jade
+++ b/views/comments/_comment.jade
@@ -3,7 +3,7 @@ mixin render_comment(comment, path)
     .comment-body= comment['comment']
     .comment-actions
       a.add-comment(href='#', data-path=path) Add comment
-      span.created-at= article['created_at']
+      span.created-at= comment['created_at']
       span.comment-author= 'by ' + comment['author']
     if comment['comments']
       - each cmnt, i in comment['comments']
